# logical-entailment-dataset

./: Main.hs  README.md  Setup.hs  entailment.cabal  parser.py
data/: big_20_test_big.txt  test_easy.txt  test_exam.txt  test_hard.txt  test_massive.txt  validate.txt
