name:                entailment
version:             0.1.0.0
synopsis:            Generating datasets for detecting logical entailment
description:         This program generates a dataset for logical entailment. 
homepage:            https://www.doc.ic.ac.uk/~re14/
license:             Apache-2.0
license-file:        LICENSE
author:              RichardEvans
maintainer:          RichardEvans@google.com
copyright:           2018 Google LLC
category:            Math
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable entailment
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.8 && <4.9, array >=0.5 && <0.6, hatt >=1.5 && <1.6, containers >=0.5 && <0.6, minisat >=0.1 && <0.2, process >=1.2 && <1.3, random >=1.1 && <1.2, parsec >=3.1 && <3.2
  -- hs-source-dirs:      
  default-language:    Haskell2010